--- a/WebApplication4/WebApplication4/Views/Evento/Distritos.cshtml
+++ b/WebApplication4/WebApplication4/Views/Evento/Distritos.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     Layout = null;
     var db = new WebApplication4.Models.inf245netsoft();
-    int depId = int.Parse(Request["depId"]);
+    int depId = Request.QueryString[0].AsInt();
     var data = from obj in db.Region
                where obj.idRegPadre == depId
                select new { IdRegion = obj.idRegion, Nombre = obj.nombre };
