--- a/WebApplication4/WebApplication4/Views/Evento/Subcategorias.cshtml
+++ b/WebApplication4/WebApplication4/Views/Evento/Subcategorias.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     Layout = null;
     var db = new WebApplication4.Models.inf245netsoft();
-    int depId = int.Parse(Request["depId"]);
+    int depId = Request.QueryString[0].AsInt();
     var data = from obj in db.Categoria
                where obj.idCatPadre == depId
                select new { IdRegion = obj.idCategoria, Nombre = obj.nombre };
