actualizaacion base de datos

--- a/WebApplication4/WebApplication4/Views/Evento/FuncionRow.cshtml
+++ b/WebApplication4/WebApplication4/Views/Evento/FuncionRow.cshtml
@@ -16,11 +16,8 @@
             <div class="col-md-2">
                 @Html.TextBoxFor(c => c.horaInicio, new { @class = "form-control", @type = "time" })
             </div>
-            <div class="col-md-1">
-                <input type="radio" name="groupFunciones" value="' + (cantFuncion + 1) + '">
-            </div>
         </div>
-        <a href="#" class="deleteRow">delete</a>
+        <span class="glyphicon glyphicon-remove"></span><a href="#" class="deleteRow">delete</a>
         <br>
     }
 </div>
