--- a/WebApplication4/WebApplication4/Views/Evento/BloquesTiempoVenta.cshtml
+++ b/WebApplication4/WebApplication4/Views/Evento/BloquesTiempoVenta.cshtml
@@ -60,32 +60,87 @@
     </div>
 </div>
 <script>
+    function validarFechaActualOMayor(fecha) {
+        var fechaS = fecha.split('-');
+        var fFecha = new Date(fechaS[2], --fechaS[1], fechaS[0]);
+
+        var today = new Date();
+        today.setHours(0, 0, 0, 0);
+
+        var maxDate = new Date();
+        maxDate.setHours(0, 0, 0, 0);
+        maxDate.setYear(maxDate.getYear() + 20);
+
+        return (fFecha >= today) && (dataEjem <= maxDate);
+    }
+    function validarFechaInicioYFin(fechaInicio, fechaFin) {
+        var date = new Date();
+        date.setHours(0, 0, 0, 0);
+        var dateYear = date.getFullYear();
+
+        var malInicio = 0, malFinal = 0;
+        if (!validarFechaActualOMayor(fechaInicio)) {
+            malInicio = 1;
+        }
+
+        if (!validarFechaActualOMayor(fechaFin)) {
+            malFinal = 1;
+        }
+
+        if (malInicio) {
+            alert("Fecha de inicio incorrecta: " + fechaInicio + ". Ingrese una fecha valida (Rango de fecha: " + dateYear + " - " + (dateYear + 20) + ").");
+        }
+        if (malFinal) {
+            alert("Fecha de fin incorrecta: " + fechaFin + ". Ingrese una fecha valida (Rango de fecha: " + dateYear + " - " + (dateYear + 20) + ").");
+        }
+        if (!malInicio && !malFinal) {
+            return true;
+        }
+        return false;
+    }
+    function validarRangoFechas(fechaInicio, fechaFin) {
+        var inicio = fechaInicio.split('-');
+        var fInicio = new Date(inicio[2], --inicio[1], inicio[0]);
+        var fin = fechaFin.split('-');
+        var fFin = new Date(fin[2], --fin[1], fin[0]);
+        return fInicio <= fFin;
+    }
     function nuevoBloque() {
         var fechaInicio = $("#fechaInicioInput").val();
         var fechaFin = $("#fechaFinInput").val();
         //tiene que poner las fechas si o si
         if (fechaInicio && fechaFin) {
-            //verificar fechas antes de hacer algo(que sea mayor o igual al año actual, fecha inicio < fecha fin)
-            var rowId = $("#histBloque").val();
+            //verificar que sean fechas validas
+            if (validarFechaInicioYFin(fechaInicio, fechaFin)) {
+                //verificar que la fecha de inicio sea menor que la fecha fin
+                if (validarRangoFechas(fechaInicio, fechaFin)) {
+                    var rowId = $("#histBloque").val();
 
-            var table = document.getElementById("bloqueDeTiempo");
-            var row = table.insertRow();
-            row.setAttribute("data-fechaInicio", fechaInicio);
-            row.setAttribute("data-fechaFin", fechaFin);
-            row.id = rowId;
-            var cell1 = row.insertCell(0);//desde
-            cell1.innerHTML = fechaInicio;
-            var cell2 = row.insertCell(1);//hasta
-            cell2.innerHTML = fechaFin;
-            var cell3 = row.insertCell(2);
-            cell3.align = "center";
-            cell3.innerHTML = '<input type="radio" name="groupBloquedeVenta" value="' + (parseInt(row.id)) + '">';
+                    var table = document.getElementById("bloqueDeTiempo");
+                    var row = table.insertRow();
+                    row.setAttribute("data-fechaInicio", fechaInicio);
+                    row.setAttribute("data-fechaFin", fechaFin);
+                    row.id = rowId;
+                    var cell1 = row.insertCell(0);//desde
+                    cell1.innerHTML = fechaInicio;
+                    var cell2 = row.insertCell(1);//hasta
+                    cell2.innerHTML = fechaFin;
+                    var cell3 = row.insertCell(2);
+                    cell3.align = "center";
+                    cell3.innerHTML = '<input type="radio" name="groupBloquedeVenta" value="' + (parseInt(row.id)) + '">';
 
-            $("#fechaInicioInput").val('');
-            $("#fechaFinInput").val('');
+                    $("#fechaInicioInput").val('');
+                    $("#fechaFinInput").val('');
 
-            $("#fechaInicioInput").focus();
-            $("#histBloque").val(parseInt(row.id) + 1);
+                    $("#fechaInicioInput").focus();
+                    $("#histBloque").val(parseInt(row.id) + 1);
+                } else {
+                    alert("La fecha de fin debe ser posterior a al fecha inicio");
+                }
+
+            }
+        } else {
+            alert("Campos vacios. Ingrese datos nuevamente.");
         }
     }
     function quitarBloque() {
