--- a/WebApplication4/WebApplication4/Views/Shared/_LayoutPersonal.cshtml
+++ b/WebApplication4/WebApplication4/Views/Shared/_LayoutPersonal.cshtml
@@ -52,7 +52,7 @@
                             <ul class="dropdown-menu">
                                 <li><a href="buscar-evento(vendedor).html">Buscar eventos</a></li>
                                 <li><a href="@Url.Action("Entrega", "Ventas")">Entregar boletos</a></li>
-                                <li><a href="pagar_reserva(vendedor).html">Buscar reserva</a></li>
+                                <li><a href="@Url.Action("BuscaReserva","CuentaUsuario")">Buscar reserva</a></li>
                                 <li><a href="@Url.Action("Devolucion", "Ventas")">Devolución</a></li>
                                 <li class="divider"></li>
                                 <li><a href="@Url.Action("BuscaCliente", "CuentaUsuario")">Buscar cliente</a></li>
